add dummy login route
